# turboquant-space

./: .gitignore  CMakeLists.txt  LICENSE  README.md  handoff_math_review.md  pyproject.toml
.github/workflows/: publish.yml  test.yml  wheels.yml
docs/: benchmarks.md  recall_analysis_report.md
include/turboquant/: space_turbo_quant.h  turbo_quant.h
python/benchmarks/: run_benchmark.py
python/benchmarks/results/: results_20260412_003138.csv
python/examples/: torch_encode.py
python/notebooks/: wht_distribution_analysis.ipynb
python/tests/: debug_sym.py  perfomance_check.py  test_turboquant.py
python/turboquant/: __init__.py  _turboquant.pyi  bindings.cpp
